--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,32 @@ spring:
     name: drinkcoffeefeign
 server:
   port: 8089
+  
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+  info:
+    env:
+      enabled: true
+  endpoint:
+    shutdown:
+      access: unrestricted
+
+
+eureka:
+  instance:
+    prefer-ip-address: true
+    instance-id: ${spring.application.name}:${random.value}
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+       defaultZone: http://localhost:8070/eureka
+ 
+info:
+  app:
+    name: "drinkcoffeefeign"
+    description: "Coffee Drinker"
+    version: "2.0"
